tests/ui/generic-associated-types/higher-ranked-coroutine-param-outlives.no_assumptions.stderr
error: `C` does not live long enough
  --> $DIR/higher-ranked-coroutine-param-outlives.rs:21:5
   |
LL |     async move { c.connect().await }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

